# Deep-Claw-AI-Agent

./: .env.example  .gitignore  .replit  ADSA_V7_README.md  ADSA_v7.2_KNN.pine  ADSA_v7.3_TF.pine  Absolute Dollar Agent V8.txt  DEEPCLAW_CLAUDE_CODE_BUILD_BRIEF.md  DEEPCLAW_README.md  DEEP_CLAW_AGENT.md  README.md  The Claw Protocol.txt  bootstrap.sh  deep_claw_adsa_cheatsheet (1).md  deep_claw_v8_unified_architecture (1).md  main.py  pyproject.toml  replit.nix
deep_claw/: orchestrator.py
deep_claw/action/: bybit_perp.py  deriv_multiplier.py  deriv_trading_ws.py  mt5_cfd.py  protocol.py
deep_claw/claude/: daily_assessment.py  qualification.py  sl_autopsy.py
deep_claw/cognition/: chain_reasoning.py  confidence_v1.py  position_manager.py
deep_claw/communication/: dashboard.py  renderer.py  telegram.py  telegram_commands.py
deep_claw/config/: instrument_registry.yaml  settings.py
deep_claw/core/: types.py
deep_claw/feeds/: bybit_feed.py  deriv_feed.py
deep_claw/journal/: daily_report.py  episode_stream.py  feature_store.py  outcome_labeler.py  pip_tracker.py
deep_claw/learning/: inference.py  model.py  sizing.py
deep_claw/perception/: candle_bus.py  episode_emitter.py  market_state.py
mql5/: ClawProtocolEA.mq5  DeepClawAgent.mq5
reference/: ADSA_v75_README.md  ADSA_v7_1_README.md
reference/pine-source/: ADSA_v75_memory_patch.pine  ADSA_v75_merged.pine  ADSA_v75_string_patch.pine  ADSA_v7_1_MTFLiqFib.pine  ADSA_v7_ChatPaste_MTFLiqFib.pine  The Claw Protocol.txt  (+4 more)
tests/: test_episode_stream.py  test_position_manager.py  test_signal_generators.py
(+19 files in other folders)
