[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-claw"
version = "0.1.0"
description = "Deep Claw — event-sourced synthetic trading intelligence"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "anthropic>=0.28",
    "pybit>=5.6",
    "numpy>=1.26",
    "pandas>=2.2",
    "lightgbm>=4.3",
    "websockets>=12.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "tenacity>=8.2",
]

[project.optional-dependencies]
mt5 = ["MetaTrader5>=5.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
